--- a/CS_stu_Midterm_exam/packages.config
+++ b/CS_stu_Midterm_exam/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
 </packages>
